Complete License profile controller

--- a/Views/Account/RegistrationSuccess.cshtml
+++ b/Views/Account/RegistrationSuccess.cshtml
@@ -4,5 +4,5 @@
 <h2>Registration Successful</h2>
 <p>Your account has been created successfully.</p>
 <p><strong>Your assigned username:</strong> <span style="color: blue;">@ViewBag.GeneratedUsername</span></p>
-<p>Please use this username to log in.</p>
-<a href="@Url.Action("Login", "Account")" class="btn btn-primary">Go to Login</a>
+<p>Please use this username to register for license details.</p>
+<a href="@Url.Action("Create", "LicenseProfile")" class="btn btn-primary">Go to Login</a>
