--- a/Views/License/NextStep.cshtml
+++ b/Views/License/NextStep.cshtml
@@ -13,4 +13,4 @@ else
 <p>No category selected.</p>
 }
 
-<a href="@Url.Action("Index", "License")" class="btn btn-secondary">Go Back</a>
+<a href="@Url.Action("Create", "License")" class="btn btn-secondary">Go Back</a>
